[package]
name = "imxrt-usbd"
version = "0.2.1"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
repository = "https://github.com/imxrt-rs/imxrt-usbd"
edition.workspace = true
license = "MIT OR Apache-2.0"
keywords = ["imxrt", "nxp", "embedded", "usb"]
categories = ["embedded", "no-std"]
readme = "README.md"
description = """
USB driver for NXP iMX RT processors
"""
exclude = [".github/*", ".gitignore"]

[dependencies]
bitflags = "2.4.0"
cortex-m = "0.7.0"
ral-registers = "0.1.3"
usb-device = "0.2.0"

[dependencies.log]
optional = true
version = "0.4"

[dependencies.heapless]
optional = true
version = "0.7.16"

[features]
default = ["__log_events"]

# Internal debugging feature; do not use
__log_events = ["heapless"]

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"

[workspace.package]
edition = "2021"

[profile.release]
overflow-checks = true
